# hpke-simdium

./: .astylerc  CMakeLists.txt  README.md  cpu_feat.txt  dhkem.c  dhkem.h  dhkem_avx2.c  dhkem_avx2.h  dhkem_avx512.c  dhkem_avx512.h  dhkem_bssl.c  dhkem_bssl.h  dhkem_ossl.c  dhkem_ossl.h  dhkem_x64.c  dhkem_x64.h  instructions.txt  kdf.c  kdf.h  kdf_bssl.c  kdf_ossl.c  main.c  types.c  types.h  util.c  util.h  x25519.c  x25519.h  x25519_avx2.c  x25519_avx2.h  x25519_bssl.h  x25519_crypto.c  x25519_ossl.c  x25519_ossl.h
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench.c  bench.h  bench_avx2.c  bench_avx512.c  bench_awslc.c  bench_bssl.c  bench_dhkem.c  bench_dhkem.h  bench_dhkem_avx2.c  bench_hpke_simdium.c  bench_ossl.c  bench_x25519.c  clocks.c  clocks.h  dhkem.c  dhkem.h  x25519_awslc.h  x25519_bssl.h  x25519_crypto.c  x25519_ossl.h
test/: CMakeLists.txt  common.cc  dhkem_test.cc  kdf_test.cc
